# nfsu2-g29-ffb

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  README_ES.md  README_FR.md  README_IT.md  README_PT.md  build.bat  cars.ini  config.ini
src/: car_physics.cpp  car_physics.h  config.cpp  config.h  dinput8_proxy.cpp  dinput8_proxy.h  dinput_proxy.cpp  dinput_proxy.h  dllmain.cpp  engine_curve.cpp  engine_curve.h  ffb_engine.cpp  ffb_engine.h  force_feedback.cpp  force_feedback.h  g29_device.cpp  g29_device.h  input_bridge.cpp  input_bridge.h  logger.cpp  logger.h  logitech_led.cpp  logitech_led.h  nfsu2_addresses.h  pattern_scan.cpp  pattern_scan.h  proxy_log.h  telemetry.cpp  telemetry.h  wheel_input.cpp  wheel_input.h  winmm.def  winmm_proxy.cpp
